# loggery

./: .gitignore  CMakeLists.txt  LoggeryConfig.h  LoggeryConfig.h.in  README.md  main.cpp  main_dummy.cpp
content/: files_mapper.h
external_libs/: libs.txt
external_libs/include/: cute_png.h
external_libs/include/glad/: glad.c  glad.h
external_libs/include/imgui/: imconfig.h  imgui.h  imgui_impl_opengl3.cpp
external_libs/include/imgui/misc/stl/: imgui_stl.cpp
external_libs/lib/win/msvc/debug/: clip.lib  glfw3.lib
external_libs/lib/win/msvc/release/: clip.lib  glfw3.lib
src/classes/: Color.hpp  Image.cpp  Image.h  Timer.cpp  Timer.h  Vector.hpp  Window.cpp  Window.h
src/forms/: LogForm.cpp  LogForm.h  SystemLog.cpp  SystemLog.h
src/gui/: MenuBar.cpp  MenuBar.h  MenuItem.cpp  MenuItem.h  Text.cpp  Text.h  Textbox.cpp  Textbox.h
src/managers/: LogManager.cpp  LogManager.h  ProgramManager.cpp  ProgramManager.h
tests/: CMakeLists.txt  test_misc.cpp
