cmake_minimum_required(VERSION 3.12)
project(test_loggery)

include_directories(${PROJECT_SOURCE_DIR}../src ${PROJECT_SOURCE_DIR}../external_libs/include)
message("Test dir" ${PROJECT_SOURCE_DIR})

set(FMT_SOURCE_FILES ../external_libs/include/fmt/core.h ../external_libs/include/fmt/format.cc
        ../external_libs/include/fmt/format.h ../external_libs/include/fmt/format-inl.h ../external_libs/include/fmt/ostream.h
        ../external_libs/include/fmt/posix.cc ../external_libs/include/fmt/posix.h ../external_libs/include/fmt/printf.h
        ../external_libs/include/fmt/ranges.h ../external_libs/include/fmt/time.h)

set(IMGUI_SOURCE_FILES ../external_libs/include/imgui/imgui_impl_glfw.cpp ../external_libs/include/imgui/imgui_impl_opengl3.cpp
        ../external_libs/include/imgui/imgui.cpp ../external_libs/include/imgui/imgui_draw.cpp
        ../external_libs/include/imgui/imgui_demo.cpp ../external_libs/include/imgui/misc/stl/imgui_stl.cpp)

set(GLAD_SOURCE_FILES ../external_libs/include/glad/glad.c ../external_libs/include/glad/glad.h ../external_libs/include/glad/khrplatform.h )

set(SOURCE_FILES test_misc.cpp ../src/classes/Timer.cpp ../src/gui/Text.cpp)

add_executable(test_loggery ${SOURCE_FILES} ${IMGUI_SOURCE_FILES} ${GLAD_SOURCE_FILES} ${FMT_SOURCE_FILES})

if(LINUX)
    set(MY_STATIC_LIBS ${PROJECT_SOURCE_DIR}/../external_libs/lib/linux/libglfw3.a ${PROJECT_SOURCE_DIR}/../external_libs/lib/linux/libclip.a)
    #set(GLFW_DEPENDENCIES -lrt -lXrandr -lXinerama -lXi -lXcursor -lGL -lm -ldl -lXrender -ldrm -lXdamage -lX11-xcb -lxcb-glx -lxcb-dri2 -lxcb-dri3 -lxcb-present -lxcb-sync -lxshmfence -lXxf86vm -lXfixes -lXext -lX11 -lpthread -lxcb -lXau -lXdmcp)
    set(GLFW_DEPENDENCIES -lrt -lXrandr -lXinerama -lXi -lXcursor -lGL -ldl -lXxf86vm -lX11 -lpthread)
    target_link_libraries(test_loggery stdc++fs ${MY_STATIC_LIBS} ${GLFW_DEPENDENCIES})
elseif(APPLE)
    message("Using MAC")
    if(DEBUG)
        message(WARN "CLANG-DEBUG")
        set(MY_STATIC_LIBS ${PROJECT_SOURCE_DIR}/../external_libs/lib/osx/debug/libglfw3.a ${PROJECT_SOURCE_DIR}/../external_libs/lib/osx/debug/libclip.a)
        set(GLFW_DEPENDENCIES /System/Library/Frameworks/Cocoa.framework /System/Library/Frameworks/OpenGL.framework /System/Library/Frameworks/IOKit.framework /System/Library/Frameworks/CoreVideo.framework)#-framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo)
        target_link_libraries(test_loggery /usr/local/opt/llvm/lib/libc++experimental.a ${MY_STATIC_LIBS} ${GLFW_DEPENDENCIES})
    else()
        message("CLANG-RELEASE")
        set(MY_STATIC_LIBS ${PROJECT_SOURCE_DIR}/../external_libs/lib/osx/release/libglfw3.a ${PROJECT_SOURCE_DIR}/../external_libs/lib/osx/release/libclip.a)
        set(GLFW_DEPENDENCIES /System/Library/Frameworks/Cocoa.framework /System/Library/Frameworks/OpenGL.framework /System/Library/Frameworks/IOKit.framework /System/Library/Frameworks/CoreVideo.framework)#-framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo)
        target_link_libraries(test_loggery /usr/local/opt/llvm/lib/libc++experimental.a ${MY_STATIC_LIBS} ${GLFW_DEPENDENCIES})
    endif()
elseif(WINDOWS)
    message(WARNING "Using WINDOWS")
    if(MSVC)
        message("Compiler: MSVC")
        if(DEBUG)
            message(WARN "MSVC-DEBUG")
            set(MY_STATIC_LIBS ${PROJECT_SOURCE_DIR}/../external_libs/lib/win/msvc/debug/glfw3.lib ${PROJECT_SOURCE_DIR}/../external_libs/lib/win/msvc/debug/clip.lib)
            set(GLFW_DEPENDENCIES )
            target_link_libraries(test_loggery ${MY_STATIC_LIBS} ${GLFW_DEPENDENCIES})
        else()
            message("MSVC-RELEASE")
            set(MY_STATIC_LIBS ${PROJECT_SOURCE_DIR}/../external_libs/lib/win/msvc/release/glfw3.lib ${PROJECT_SOURCE_DIR}/../external_libs/lib/win/msvc/release/clip.lib)
            set(GLFW_DEPENDENCIES )
            target_link_libraries(test_loggery ${MY_STATIC_LIBS} ${GLFW_DEPENDENCIES})
        endif()
    elseif(MINGW)
        message(WARNING "Compiler: MinGW")
        if(DEBUG)
            message(WARN "MinGW-DEBUG")
            set(MY_STATIC_LIBS ${PROJECT_SOURCE_DIR}/../external_libs/lib/win/mingw/debug/libglfw3.a ${PROJECT_SOURCE_DIR}/../external_libs/lib/win/mingw/debug/libclip.a)
            set(GLFW_DEPENDENCIES stdc++fs)
            target_link_libraries(test_loggery ${MY_STATIC_LIBS} ${GLFW_DEPENDENCIES})
        else()
            message("MinGW-RELEASE")
            set(MY_STATIC_LIBS ${PROJECT_SOURCE_DIR}/../external_libs/lib/win/mingw/release/libglfw3.a ${PROJECT_SOURCE_DIR}/../external_libs/lib/win/mingw/release/libclip.a)
            set(GLFW_DEPENDENCIES stdc++fs)
            target_link_libraries(test_loggery ${MY_STATIC_LIBS} ${GLFW_DEPENDENCIES})
        endif()
    else()
        message(WARNING "Compiler: UNKNOWN")
    endif()
endif()